--- a/commerce_store_override.services.yml
+++ b/commerce_store_override.services.yml
@@ -1,4 +1,4 @@
 services:
   commerce_store_override.repository:
     class: Drupal\commerce_store_override\StoreOverrideRepository
-    arguments: ['@database']
+    arguments: ['@database', '@datetime.time']
