--- a/commerce_store_override.services.yml
+++ b/commerce_store_override.services.yml
@@ -2,3 +2,7 @@ services:
   commerce_store_override.repository:
     class: Drupal\commerce_store_override\StoreOverrideRepository
     arguments: ['@database', '@datetime.time']
+
+  commerce_store_override.manager:
+    class: Drupal\commerce_store_override\StoreOverrideManager
+    arguments: ['@commerce_store.current_store', '@current_route_match', '@commerce_store_override.repository']
