--- a/commerce_store_override.services.yml
+++ b/commerce_store_override.services.yml
@@ -6,3 +6,9 @@ services:
   commerce_store_override.manager:
     class: Drupal\commerce_store_override\StoreOverrideManager
     arguments: ['@commerce_store.current_store', '@current_route_match', '@commerce_store_override.repository']
+
+  commerce_store_override.route_subscriber:
+    class: Drupal\commerce_store_override\EventSubscriber\RouteSubscriber
+    arguments: ['@entity_type.manager']
+    tags:
+      - { name: event_subscriber }
